--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-  /* 배경은 무조건 흰색 고정 */
+  /* 어디서 열어도 배경 흰색/
   body, html, * {
     background-color: #ffffff !important;
   }
+</style>
 
-  /* 기본 글씨는 검정 */
+
+<style>
   body {
     color: #000000;
     font-family: sans-serif;
     margin: 0;
     padding: 20px;
     box-sizing: border-box;
+    background-color: #ffffff;  /* 배경 흰색 고정 */
   }
 
   /* 중요한 시그니처 – 딥 체리 레드 */
@@ -26,7 +29,6 @@
     font-weight: bold;
   }
 </style>
-
 
   /* 컨테이너를 화면 크기에 맞게 조정 */
   .container {
@@ -264,7 +266,7 @@
 <li>888 겟더파티</li>
 <li>911 트월킹</li>
 <li>922 캐리유</li>
-<li class= "hot">992 피카소, P.casso</li>
+<li>992 피카소, P.casso</li>
 <li>999 바비걸</li>
 <li>1000 VIP</li>
 <li>1001 텐프로, 10PRO</li>
