--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 <li>888 겟더파티</li>
 <li>911 트월킹</li>
 <li>922 캐리유</li>
-<li>992 피카소, P.casso</li>
+<li class="hot">992 피카소, P.casso</li>
 <li>999 바비걸</li>
 <li>1000 VIP</li>
 <li>1001 텐프로, 10PRO</li>
