--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -60,6 +59,19 @@
     font-weight: bold;
   }
 
+  #videoModal {
+    display: none;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.8);
+    justify-content:center;
+    align-items:center;
+    z-index: 10000;
+  }
+
   #videoModal .closeBtn {
     position: absolute;
     top: 15px;
@@ -68,7 +80,12 @@
     font-weight: bold;
     color: #ff4c4c;
     cursor: pointer;
-    z-index: 10000;
+    z-index: 10001;
+  }
+
+  #modalVideo {
+    width: 80%;
+    height: 80%;
   }
 </style>
 </head>
@@ -78,7 +95,6 @@
 <div class="container">
   <h1>LABEL LIST</h1>
   <input id="search" placeholder="검색어 입력">
-
   <ul id="list">
     <li data-video="https://vod.sooplive.co.kr/player/185947191/catch">1000 프리댄스</li>
 <li data-video="https://vod.sooplive.co.kr/player/185947187/catch">1001 섹시댄스</li>
@@ -451,19 +467,26 @@
   </ul>
 </div>
 
+<!-- 모달 구조 -->
+<div id="videoModal">
+  <span class="closeBtn">&times;</span>
+  <iframe id="modalVideo" src="" frameborder="0" allowfullscreen></iframe>
+</div>
+
 <script>
   const hotList = [
     "6222", "10007", "10045", "10051", "10052", "10053",
-    "10078", "10117", "100782", "12425", "13333",
+    "10078", "10117", "10782", "12425", "13333",
     "20052", "20411", "21725", "22222", "23333"
   ];
 
   const items = document.querySelectorAll("#list li");
   items.forEach(li => {
-    const id = li.getAttribute("data-id");
+    const id = li.innerText.split(" ")[0];
     if (hotList.includes(id)) li.classList.add("hot");
   });
 
+  // 검색 기능
   const searchInput = document.getElementById("search");
   searchInput.addEventListener("keyup", function() {
     const query = this.value.toLowerCase();
@@ -472,38 +495,30 @@
     });
   });
 
+  // 모달 기능
+  const modal = document.getElementById("videoModal");
+  const modalVideo = document.getElementById("modalVideo");
+  const closeBtn = document.querySelector("#videoModal .closeBtn");
+
   items.forEach(li => {
     li.addEventListener("click", () => {
       const videoUrl = li.getAttribute("data-video");
       if (!videoUrl) return;
-
-      let modal = document.getElementById("videoModal");
-      if (!modal) {
-        modal = document.createElement("div");
-        modal.id = "videoModal";
-        modal.style.cssText =
-          "position:fixed;top:0;left:0;width:100%;height:100%;" +
-          "background:rgba(0,0,0,0.85);z-index:9999;display:flex;align-items:center;justify-content:center;";
-
-        const closeBtn = document.createElement("span");
-        closeBtn.innerHTML = "&times;";
-        closeBtn.className = "closeBtn";
-        closeBtn.onclick = () => modal.remove();
-        modal.appendChild(closeBtn);
-
-        const iframe = document.createElement("iframe");
-        iframe.src = videoUrl;
-        iframe.width = "90%";
-        iframe.height = "60%";
-        iframe.style.maxWidth = "900px";
-        iframe.style.maxHeight = "600px";
-        iframe.style.border = "none";
-        iframe.allow = "autoplay; fullscreen";
-        modal.appendChild(iframe);
-
-        document.body.appendChild(modal);
-      }
+      modal.style.display = "flex";
+      modalVideo.src = videoUrl;
     });
+  });
+
+  closeBtn.addEventListener("click", () => {
+    modal.style.display = "none";
+    modalVideo.src = "";
+  });
+
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) {
+      modal.style.display = "none";
+      modalVideo.src = "";
+    }
   });
 </script>
 
