--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 </head>
 
 <body>
-
 <div class="container">
   <h1>LABEL LIST</h1>
   <input id="search" placeholder="검색어 입력">
   <ul id="list">
+    <!-- 여기에 모든 li 항목 붙여 넣기 -->
     <li data-video="https://vod.sooplive.co.kr/player/185947191/catch">1000 프리댄스</li>
 <li data-video="https://vod.sooplive.co.kr/player/185947187/catch">1001 섹시댄스</li>
 <li data-video="https://vod.sooplive.co.kr/player/180346975">1004 if you love me</li>
@@ -483,44 +483,37 @@
   const items = document.querySelectorAll("#list li");
   items.forEach(li => {
     const id = li.innerText.split(" ")[0];
-    if (hotList.includes(id)) li.classList.add("hot");
-  });
-
-  // 검색 기능
-  const searchInput = document.getElementById("search");
-  searchInput.addEventListener("keyup", function() {
-    const query = this.value.toLowerCase();
-    items.forEach(li => {
-      li.style.display = li.innerText.toLowerCase().includes(query) ? "" : "none";
-    });
-  });
-
-  // 모달 기능
-  const modal = document.getElementById("videoModal");
-  const modalVideo = document.getElementById("modalVideo");
-  const closeBtn = document.querySelector("#videoModal .closeBtn");
-
-  items.forEach(li => {
-    li.addEventListener("click", () => {
-      const videoUrl = li.getAttribute("data-video");
-      if (!videoUrl) return;
-      modal.style.display = "flex";
-      modalVideo.src = videoUrl;
-    });
-  });
-
-  closeBtn.addEventListener("click", () => {
-    modal.style.display = "none";
-    modalVideo.src = "";
-  });
-
-  modal.addEventListener("click", (e) => {
-    if (e.target === modal) {
-      modal.style.display = "none";
-      modalVideo.src = "";
+    if (hotList.includes(id)) {
+      li.classList.add("hot");
     }
+
+    li.addEventListener("click", () => {
+      const videoUrl = li.dataset.video;
+      if (!videoUrl) return;
+      const modal = document.getElementById("videoModal");
+      const modalVideo = document.getElementById("modalVideo");
+      modalVideo.src = videoUrl;
+      modal.style.display = "flex";
+    });
+  });
+
+  document.querySelector("#videoModal .closeBtn").addEventListener("click", () => {
+    const modal = document.getElementById("videoModal");
+    const modalVideo = document.getElementById("modalVideo");
+    modalVideo.src = "";
+    modal.style.display = "none";
+  });
+
+  document.getElementById("search").addEventListener("keyup", function() {
+    const v = this.value.toLowerCase();
+    items.forEach(li => {
+      if (li.innerText.toLowerCase().includes(v)) {
+        li.style.display = "";
+      } else {
+        li.style.display = "none";
+      }
+    });
   });
 </script>
-
 </body>
 </html>
