--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-<meta charset="utf-8">
-<title>label</title>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>영상 리스트</title>
 <style>
-  body, html, * {
-    background-color: #ffffff !important;
-    color: #000000 !important;
-  }
-
-  body {
+  body, html {
+    margin:0;
+    padding:0;
     font-family: sans-serif;
-    margin: 0;
-    padding: 20px;
-    box-sizing: border-box;
+    background-color: #fff;
+    color: #000;
   }
 
-  .container {
-    width: 100%;
-    max-width: 600px;
-    margin: auto;
-  }
-
-  h1, #search {
+  h1 {
     text-align: center;
-    display: block;
-    width: 100%;
+    margin: 20px 0;
   }
 
   #search {
-    padding: 10px;
-    margin: 10px 0 20px 0;
+    display: block;
+    margin: 0 auto 20px auto;
+    padding: 8px 12px;
+    width: 90%;
+    max-width: 400px;
     font-size: 16px;
-    box-sizing: border-box;
   }
 
   ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    list-style:none;
+    padding:0;
+    margin:0 auto;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    gap:10px;
+    max-width: 1200px;
   }
 
-  li {
-    padding: 6px;
-    border-bottom: 1px solid #ddd;
-    cursor: pointer;
+  ul li {
+    cursor:pointer;
+    padding:10px;
+    border:1px solid #ddd;
+    border-radius:8px;
+    text-align:center;
+    flex:1 1 120px;
+    max-width: 150px;
+    transition: transform 0.2s, background 0.2s;
   }
 
-  @media (max-width: 400px) {
-    #search { font-size: 14px; padding: 8px; }
-    li { font-size: 14px; }
+  ul li.hot {
+    border-color:red;
   }
 
-  .hot {
-    color: #c92a2a !important;
-    font-weight: bold;
+  ul li:hover {
+    transform: scale(1.05);
+    background: #f0f0f0;
   }
 
+  /* 모달 전체 */
   #videoModal {
     display: none;
     position: fixed;
@@ -66,10 +66,10 @@
     left:0;
     width:100%;
     height:100%;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.85);
     justify-content:center;
     align-items:center;
-    z-index: 10000;
+    z-index:10000;
   }
 
   #videoModal .closeBtn {
@@ -80,23 +80,37 @@
     font-weight: bold;
     color: #ff4c4c;
     cursor: pointer;
-    z-index: 10001;
+    z-index:10001;
   }
 
+  /* iframe 반응형 */
   #modalVideo {
-    width: 80%;
-    height: 80%;
+    width: 90%;
+    max-width: 1280px;
+    aspect-ratio: 16 / 9;
+    border: none;
+  }
+
+  @media (max-width: 600px) {
+    #modalVideo {
+      width: 95%;
+    }
+  }
+
+  @media (max-width: 400px) {
+    #modalVideo {
+      width: 100%;
+    }
   }
 </style>
 </head>
-
 <body>
-<div class="container">
-  <h1>LABEL LIST</h1>
-  <input id="search" placeholder="검색어 입력">
-  <ul id="list">
-    <!-- 여기에 모든 li 항목 붙여 넣기 -->
-    <li data-video="https://vod.sooplive.co.kr/player/185947191/catch">1000 프리댄스</li>
+
+<h1>영상 리스트</h1>
+<input type="text" id="search" placeholder="검색">
+
+<ul id="list">
+  <li data-video="https://vod.sooplive.co.kr/player/185947191/catch">1000 프리댄스</li>
 <li data-video="https://vod.sooplive.co.kr/player/185947187/catch">1001 섹시댄스</li>
 <li data-video="https://vod.sooplive.co.kr/player/180346975">1004 if you love me</li>
 <li data-video="https://vod.sooplive.co.kr/player/156219647/catch">1087 왠지</li>
@@ -463,57 +477,52 @@
 <li>111112 킹부리맨</li>
 <li data-video="https://vod.sooplive.co.kr/player/144076901">150000 150K</li>
 <li>200000 200K</li>
-<li data-video="https://vod.sooplive.co.kr/player/151447301">300000 300K</li>
-  </ul>
-</div>
+<li data-video="https://vod.sooplive.co.kr/player/151447301">300000 300K</li>오전 5:03 2026-02-06
+</ul>
 
-<!-- 모달 구조 -->
 <div id="videoModal">
   <span class="closeBtn">&times;</span>
-  <iframe id="modalVideo" src="" frameborder="0" allowfullscreen></iframe>
+  <iframe id="modalVideo" allowfullscreen></iframe>
 </div>
 
 <script>
-  const hotList = [
-    "6222", "10007", "10045", "10051", "10052", "10053",
-    "10078", "10117", "10782", "12425", "13333",
-    "20052", "20411", "21725", "22222", "23333"
-  ];
+const items = document.querySelectorAll("#list li");
+const modal = document.getElementById("videoModal");
+const modalVideo = document.getElementById("modalVideo");
+const closeBtn = document.querySelector("#videoModal .closeBtn");
 
-  const items = document.querySelectorAll("#list li");
-  items.forEach(li => {
-    const id = li.innerText.split(" ")[0];
-    if (hotList.includes(id)) {
-      li.classList.add("hot");
-    }
-
-    li.addEventListener("click", () => {
-      const videoUrl = li.dataset.video;
-      if (!videoUrl) return;
-      const modal = document.getElementById("videoModal");
-      const modalVideo = document.getElementById("modalVideo");
-      modalVideo.src = videoUrl;
-      modal.style.display = "flex";
-    });
+// 리스트 클릭 → 모달 열기
+items.forEach(li => {
+  li.addEventListener("click", () => {
+    const videoUrl = li.getAttribute("data-video");
+    if (!videoUrl) return alert("영상이 존재하지 않습니다.");
+    modalVideo.src = videoUrl; // iframe에 URL 로드
+    modal.style.display = "flex";
   });
+});
 
-  document.querySelector("#videoModal .closeBtn").addEventListener("click", () => {
-    const modal = document.getElementById("videoModal");
-    const modalVideo = document.getElementById("modalVideo");
-    modalVideo.src = "";
+// 닫기 버튼
+closeBtn.addEventListener("click", () => {
+  modal.style.display = "none";
+  modalVideo.src = "";
+});
+
+// 모달 배경 클릭시 닫기
+modal.addEventListener("click", (e) => {
+  if (e.target === modal) {
     modal.style.display = "none";
-  });
+    modalVideo.src = "";
+  }
+});
 
-  document.getElementById("search").addEventListener("keyup", function() {
-    const v = this.value.toLowerCase();
-    items.forEach(li => {
-      if (li.innerText.toLowerCase().includes(v)) {
-        li.style.display = "";
-      } else {
-        li.style.display = "none";
-      }
-    });
+// 검색 기능
+document.getElementById("search").addEventListener("keyup", function() {
+  const v = this.value.toLowerCase();
+  items.forEach(li => {
+    li.style.display = li.textContent.toLowerCase().includes(v) ? "" : "none";
   });
+});
 </script>
+
 </body>
 </html>
